# HeikkinenPasswordManager

./: .env.example  .gitignore  Cargo.toml  HeikkinenPasswordManager.code-workspace  README.md  dependency_tree.txt  full_dependency_tree.txt  rustfmt.toml  setup.py
_Docs/: 3. Master Password & Authentication.md  ERD.mmd  Requirements.md  auth_unlock_flow.mmd  core-security.mmd  interactive_demo.md  password_cli .mmd  password_cli_dependencies.mmd  password_core_modules.mmd  password_manager_item_actions.md  vault_save_transaction.mmd
_Docs/keyring/: Keyring Data Model (ERD).mmd  Keyring.md  Retrieving the VEK.mmd  Storing the VEK.mmd  deleting-VEK.mmd
_Docs/secure-key-storage-os/: keyring-rs.mmd  master class.md
config/: default_config.toml
crates/password_api/: Cargo.toml
crates/password_api/src/: lib.rs
crates/password_cli/: Cargo.toml
crates/password_cli/src/: main.rs
crates/password_core/: Cargo.toml
crates/password_core/src/: crypto.rs  data_types.rs  error.rs  error_tests.rs  lib.rs  os_key_protector.rs  password_generator.rs  printer.rs  settings_manager.rs  tests.rs
crates/password_core/tests/: user_simulation_tests.rs
crates/password_storage/: Cargo.toml
crates/password_storage/src/: lib.rs
src/: main.rs
windows_pin_test/: Cargo.toml
windows_pin_test/src/: main.rs
