# // ROOT/Cargo.toml
# I:\_Dev\HeikkinenPasswordManager\Cargo.toml

[workspace]
members = [
    "crates/password_core",
    "crates/password_storage",
    "crates/password_api",
    "crates/password_cli",
]
resolver = "2" # <--- THIS LINE MUST BE DIRECTLY UNDER [workspace]

[profile.release]
lto = true
codegen-units = 1