# // crates/password_api/Cargo.toml

[package]
name = "password_api"
version = "0.1.0"
edition = "2021"

[dependencies]
password_core = { path = "../password_core" }
password_storage = { path = "../password_storage" }
rpassword = "7.0"
clipboard = "0.5"
comfy-table = "7.0"
thiserror = "1.0"
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
once_cell = "1.19"
directories = "6.0"
uuid = { version = "1.8", features = ["v4", "serde"] }
dotenv = "0.15"
inquire = "0.6"
