# crates/password_cli/Cargo.toml
[package]
name = "password_cli"
version = "0.1.0"
edition = "2021"

[dependencies]
password_core = { path = "../password_core" }
base64 = "0.22"
rpassword = "7.4"
serde_json = "1.0"
env_logger = "0.10"
zeroize = { version = "1.6", features = ["derive"] }
termcolor = "1.2" # NEW: Add termcolor dependency