# crates/password_core/Cargo.toml

[package]
name = "password_core"
version = "0.1.0"
edition = "2021"

[lib]
name = "password_core"
path = "src/lib.rs"

# Add this new section for the interactive demo binary
[[bin]]
name = "interactive_demo"
path = "src/bin/interactive_demo.rs"

# Add this new section for the interactive demo binary
[[bin]]
name = "windows_hello_pin"
path = "src/bin/windows_hello_pin.rs"

[dependencies]
# For PIN/OS authentication
# We are removing the problematic "WebAuthn" feature for now.
# "Win32_Security_Credentials" and "Win32_Foundation" are confirmed to exist.
windows = { version = "0.61", features = [
    "Win32_Foundation",           # Essential for basic types like HRESULT, BOOL, etc.
    "Win32_UI_WindowsAndMessaging",           # Essential for basic types like HRESULT, BOOL, etc.
    # "Win32_Security_Credentials", # For Credential Manager APIs, PIN/Hello
    # "Win32_System",           # Essential for basic types like HRESULT, BOOL, etc.
    # "Win32_System_Memory",           # Essential for basic types like HRESULT, BOOL, etc.
    # "Win32_Graphics_Gdi",           # Essential for basic types like HRESULT, BOOL, etc.
    # "Win32_System_Com",           # Essential for basic types like HRESULT, BOOL, etc.
]}
# Core password hashing and encryption
argon2 = { version = "0.5.3", features = ["std"] }
chacha20poly1305 = "0.10.1"
rand_core = { version = "0.6", features = ["std"] }
bincode = "1.3.3"
tempfile = "3.10.1"
tokio = { version = "1.37.0", features = ["full"] }
env_logger = "0.11.3"
colored = "2.0"


# Error handling
thiserror = "1.0.60"
log = "0.4"

# Data handling and serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"


# Unique identifiers and timestamps
uuid = { version = "1.8", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

# Security: Zeroizing sensitive data from memory
zeroize = { version = "1.6", features = ["derive"] }
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }

# Settings Manager / File IO
dirs-next = "1.0"

# CLI and user interaction (assuming password_core is also the main application's crate)
# If password_core is purely a library, these should be moved to password_cli's Cargo.toml
clap = { version = "4.5", features = ["derive"] }
scanpw = "1.0"
comfy-table = "7.1"

#keyring implementations needs it
once_cell = "1.19.0"

[dev-dependencies]
colored = "2.2.0"
tempfile = "3.10"